--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=BTL_LTM_Wep_Scaping
+application.vendor=PC_LIFESUP
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,14 +33,15 @@ dist.jar=${dist.dir}/BTL_LTM_Wep_Scaping.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/BTL_LTM_Wep_Scaping
+endorsed.classpath=
 excludes=
-file.reference.gson-2.8.9.jar=D:\\thu vien\\gson-2.8.9.jar
-file.reference.jsoup-1.15.3.jar=D:\\thu vien\\jsoup-1.15.3.jar
+file.reference.gson-2.8.5.jar=D:\\lib\\gson-2.8.5.jar
+file.reference.jsoup-1.15.3.jar-1=D:\\lib\\jsoup-1.15.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jsoup-1.15.3.jar}:\
-    ${file.reference.gson-2.8.9.jar}
+    ${file.reference.gson-2.8.5.jar}:\
+    ${file.reference.jsoup-1.15.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -48,8 +50,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=17
-javac.target=17
+javac.source=11
+javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
